Solved file transfer problem, lets goooo